gh-pages update

--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
     </head>
     <body>
         <h1>react-socket</h1>
+        <p data-height="300" data-theme-id="0" data-slug-hash="QbVmvY" data-default-tab="result" data-user="comakai" class="codepen">See the Pen <a href="http://codepen.io/comakai/pen/QbVmvY/">react-socket</a> by Eduardo García Sanz (<a href="http://codepen.io/comakai">@comakai</a>) on <a href="http://codepen.io">CodePen</a>.</p>
+        <script async src="//assets.codepen.io/assets/embed/ei.js"></script>
     </body>
 </html>
