--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
     <head>
         <meta charset="UTF-8">
         <title>react-socket</title>
+        <link rel="stylesheet" href="style.css"/>
+        <script async src="https://assets.codepen.io/assets/embed/ei.js"></script>
     </head>
     <body>
         <h1>react-socket</h1>
-        <p data-height="300" data-theme-id="0" data-slug-hash="QbVmvY" data-default-tab="result" data-user="comakai" class="codepen">See the Pen <a href="http://codepen.io/comakai/pen/QbVmvY/">react-socket</a> by Eduardo García Sanz (<a href="http://codepen.io/comakai">@comakai</a>) on <a href="http://codepen.io">CodePen</a>.</p>
-        <script async src="//assets.codepen.io/assets/embed/ei.js"></script>
+        <p>Just an example of the simple usage, check <a href="https://github.com/coma/react-socket">the repository</a> for more.</p>
+        <div class="codepen">
+            <p data-height="400" data-theme-id="0" data-slug-hash="QbVmvY" data-default-tab="result" data-user="comakai" class="codepen">See the Pen <a href="http://codepen.io/comakai/pen/QbVmvY/">react-socket</a> by Eduardo García Sanz (<a href="http://codepen.io/comakai">@comakai</a>) on <a href="http://codepen.io">CodePen</a>.</p>
+        </div>
     </body>
 </html>
